add prom metrics and expose metrics endpoint
